# ai_deploy

./: .gitignore  README.md
TensorRT/cpp/: CMakeLists.txt  main.cpp  trtInference.cpp  trtInference.hpp
TensorRT/cpp/include/: external_interface.hpp  frame_state_inference.hpp  json.h  tensorrt.hpp
TensorRT/cpp/model/: config.ini
TensorRT/cpp/src/: external_interface.cpp  frame_state_inference.cpp  json.cpp  tensorrt.cpp
TensorRT/python/: export_onnx.py  onnx2trt.py  trt_inference.py
crnn/: CMakeLists.txt  README.MD  main.cpp
crnn/include/: external_interface.hpp  frame_state_inference.hpp  tensorrt.hpp
crnn/model/: dicts.txt
crnn/src/: external_interface.cpp  frame_state_inference.cpp  tensorrt.cpp
cuda_kernel/: yolo_gpu_postprocess.cpp  yolo_gpu_postprocess.cu  yolo_gpu_process.cpp  yolo_gpu_process.cu
unet/cpp/: main.cpp
unet/cpp/include/: external_interface.hpp  frame_state_inference.hpp
unet/cpp/src/: frame_state_inference.cpp
yolov5/cpp/: CMakeLists.txt  README.MD  main.cpp
yolov5/cpp/include/: frame_state_inference.hpp  tensorrt.hpp
yolov5/cpp/model/: config.ini
yolov5/cpp/src/: frame_state_inference.cpp
yolov5/python/: yolov5_det_trt.py
yolov8/: head.py
yolov8/cpp/det/: CMakeLists.txt  README.MD  main.cpp
yolov8/cpp/det/include/: external_interface.hpp
yolov8/cpp/det/src/: frame_state_inference.cpp  tensorrt.cpp
yolov8/cpp/pose/: CMakeLists.txt  README.MD  main.cpp  run.sh
yolov8/cpp/pose/include/: frame_state_inference.hpp
yolov8/cpp/pose/src/: frame_state_inference.cpp
yolov8/cpp/seg/: CMakeLists.txt  README.MD  main.cpp
yolov8/cpp/seg/include/: external_interface.hpp  frame_state_inference.hpp
yolov8/cpp/seg/src/: frame_state_inference.cpp  tensorrt.cpp
yolox/cpp/: CMakeLists.txt  README.MD  main.cpp  run.sh
yolox/cpp/include/: frame_state_inference.hpp  tensorrt.hpp
yolox/cpp/src/: external_interface.cpp  frame_state_inference.cpp
yolox/python/: yolox_det_trt.py  yolox_utils.py
